Add vi mode to readline settings

--- a/.inputrc
+++ b/.inputrc
@@ -4,6 +4,15 @@
 # In case there is finally something useful written by void devs \:
 $include /etc/inputrc
 
+set editing-mode vi
+set show-mode-in-prompt on
+set vi-ins-mode-string \1\e[6 q\2
+set vi-cmd-mode-string \1\e[2 q\2
+set keyseq-timeout 50
+
+set keymap vi-insert
+RETURN: "\e\n"
+
 set show-all-if-ambiguous on
 set completion-query-items 32
 
