Update mpv.conf for yet better performance

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,11 +1,13 @@
 profile=fast
-hwdec=auto
+
 vo=gpu
-gpu-api=auto
+hwdec=auto
 
-scale=nearest
-cscale=nearest
+scale=nearest  # Guess this is too much
+cscale=nearest # bilinear should be fine too?
 
-sub-scale=0.8
+deband=no
+
+sub-scale=0.9
 
 script=/usr/lib/mpv-mpris/mpris.so
