Fix whitespace in foot.ini

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,11 +1,11 @@
 [main]
-locked-title = yes
+locked-title=yes
 
-font = Agave:size=25
-line-height = 29
-vertical-letter-offset = 2
+font=Agave:size=25
+line-height=29
+vertical-letter-offset=2
 
-pad = 0x0 center
+pad=0x0 center
 
 [colors]
 # Root Loops color scheme
