Update fuzzel.ini to make the world a better place

--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,17 +1,22 @@
 [main]
-font=Annotation Mono:weight=semibold:size=18
+font=Annotation Mono:weight=Medium:size=18
 icon-theme=Flat-Remix-Yellow-Dark
 
-lines=10
 width=64
+lines=10
+line-height=26
 
-# Somehow 12 ain't 12
+# Rofi didn't do this <:
+tabs=4
+
+# Surprise motherfucker (thanks to vim for fixing my mistakes)
 horizontal-pad=12
-vertical-pad=9
-inner-pad=9
+vertical-pad=8
+inner-pad=8
 
-line-height=28
-image-size-ratio=0.5
+[border]
+width=2
+radius=0
 
 [colors]
 background=1e1e2eff
@@ -25,7 +30,3 @@ selection-text=cdd6f4ff
 selection-match=89b4faff
 counter=7f849cff
 border=89b4faff
-
-[border]
-width=2
-radius=0
