Update mpv.conf to prevent oversized windows

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -8,6 +8,7 @@ cscale=nearest # bilinear should be fine too?
 
 deband=no
 
+autofit-larger=90%x90% # Nice one btw <:
 sub-scale=0.9
 
 script=/usr/lib/mpv-mpris/mpris.so
